# traact_facade

./: CMakeLists.txt  README  conanfile.py
apps/traactConsole/: CMakeLists.txt  traactConsole.cpp
include/traact/: traact_facade_export.h
include/traact/component/: PlayerBaseComponent.cpp  PlayerBaseComponent.h
include/traact/component/facade/: ApplicationAsyncSource.h  ApplicationSyncSink.h
include/traact/facade/: Facade.cpp  Facade.h  Plugin.h  PluginFactory.cpp  PluginFactory.h
include/traact/util/: FileUtil.h
